tests/snapshots/examples_fixtures/type_system__failing__131_call_arg_span_precision.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 21
---
Fixture: examples/type_system/failing/131_call_arg_span_precision.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 2nd argument to `pair` has the wrong type.

  --> examples/type_system/failing/131_call_arg_span_precision.flx:4:22
  |
1 | fn pair(a: Int, b: Int) -> Int { a + b }

  | ---------------------------------------- `pair` expects `Int` as the 2nd parameter
2 | 

3 | fn main() -> Unit {

4 |     let _x = pair(1, "oops")
  |                      ^^^^^^
  |                      ------ this argument is `String`

Help:
  Expected `Int` as the 2nd argument.
== stdout ==
<not executed>
